--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "express": "~4.16.4",
     "http-errors": "~1.6.2",
     "http-proxy": "^1.17.0",
+    "image-size": "^0.6.3",
     "is-empty": "^1.2.0",
+    "jimp": "^0.6.0",
     "joi": "^14.3.0",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "mysql2": "^1.6.4",
     "nodemon": "^1.18.4",
